--- a/lectures/Week1.ipynb
+++ b/lectures/Week1.ipynb
@@ -39,6 +39,8 @@
     "\n",
     "Every year, someone doesn't read carefully enough, so let me say it again: **DO NOT install Python 3\\.**\n",
     "\n",
+    "In spite of the warnings above (and this is `TRUE`) someone still always installs Python 3. Don't do it. I'm still waiting for the right time to transition - I'm thinking that'll be next year.\n",
+    "\n",
     "* We recommend you use the _Anaconda distribution_ of Python. You can download it [**here**](https://www.continuum.io/downloads).\n",
     "* You start up the notebook system by typing \"`jupyter notebook`\" and your terminal, and the system should be ready to use in your favorite browser. \n",
     "* Be sure to check the keyboards shortcuts under the heading of \"Help\" where you will find for instance shortcut to code-completion (Tab) and tooltip with documentation (Shift-Tab) which will save you a ton of time.  \n",
@@ -57,9 +59,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [
@@ -78,10 +79,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10694ba90>"
+       "<IPython.lib.display.YouTubeVideo at 0x1030a81d0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,15 +96,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Oh, and I forgot a few important things when I made this video last year, so here are some additional tips & tricks on IPython."
+    "Oh, and I forgot a few important things when I made this video, so here are some additional tips & tricks on IPython."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -120,10 +119,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10694b950>"
+       "<IPython.lib.display.YouTubeVideo at 0x10352b5d0>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +137,7 @@
    "source": [
     "> _Exercises_\n",
     "> \n",
-    "> * Download the IPython file that I've prepared for you and save it somewhere where you can find it again. The link is [**here**](https://raw.githubusercontent.com/suneman/socialgraphs2016/master/files/Training_notebook.ipynb). (**Hint**: Be careful not to save this in _.txt_ format - make sure the extension is _.ipynb_.)\n",
+    "> * Download the IPython file that I've prepared for you and save it somewhere where you can find it again. The link is [**here**](https://raw.githubusercontent.com/suneman/socialgraphs2017/master/files/Training_notebook.ipynb). (**Hint**: Be careful not to save this in _.txt_ format - make sure the extension is _.ipynb_.)\n",
     "> * Work through exercise 1-9 in the file, solving the simple Python exercises in there. Also use this as a chance to become familiar with how the IPython notebook works. (And a little bit of `json`). "
    ]
   },
@@ -167,10 +166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -187,10 +184,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10694bbd0>"
+       "<IPython.lib.display.YouTubeVideo at 0x10308bdd0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,9 +291,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
