--- a/lectures/AdminStuff.ipynb
+++ b/lectures/AdminStuff.ipynb
@@ -26,9 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -45,7 +43,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10699e590>"
+       "<IPython.lib.display.YouTubeVideo at 0x103b42150>"
       ]
      },
      "execution_count": 1,
@@ -70,9 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -89,7 +85,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x106b21750>"
+       "<IPython.lib.display.YouTubeVideo at 0x103b267d0>"
       ]
      },
      "execution_count": 2,
@@ -127,7 +123,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
