--- a/lectures/Week1.ipynb
+++ b/lectures/Week1.ipynb
@@ -250,7 +250,7 @@
     "> _Coding your way through Chapter 1 of MTSW2e_\n",
     "> \n",
     "> * If you don't have one, start a Twitter account. (And follow @suneman).\n",
-    "> * If you're having trouble registering as a developer, you can follow [**this**](https://support.twitter.com/articles/110250#long-code) guide. You might want to use Skype to do this, as international texting can be costly.\n",
+    "> * If you're having trouble registering as a developer, you can follow [**this**](https://support.twitter.com/articles/110250#long-code) guide. You might want to use Skype to do this, as international texting can be costly. *If you don't get a text message (**SMS only works for some Danish numbers**), ask Twitter to call with the security code*\n",
     "> * Work through example 1.1 in the book. _Note_: Some of the code in the book is outdated due to changes to the Twitter API (1.0 -\\> 1.1). Updated code can be found [**here**](http://nbviewer.ipython.org/github/ptwobrussell/Mining-the-Social-Web/blob/master/ipython_notebooks/Chapter1.ipynb). Read the text in the book, but use the code from the link as you work though the next exercises.\n",
     "> * Work through example 1.2, and also retrieve the trends for Denmark. What are they? _Hint_: I found the Denmark WOE using [this webpage](http://woeid.rosselliot.co.nz/).\n",
     "> * Work through example 1.3\\. _Bonus_: Can you think of other ways to plot nicely formatted `json` structures? \n",
