small clarification wrt binning vectore

--- a/lectures/Week2.ipynb
+++ b/lectures/Week2.ipynb
@@ -45,7 +45,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x109381c50>"
+       "<IPython.lib.display.YouTubeVideo at 0x10646bc90>"
       ]
      },
      "execution_count": 1,
@@ -85,7 +85,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x1094530d0>"
+       "<IPython.lib.display.YouTubeVideo at 0x10653c050>"
       ]
      },
      "execution_count": 2,
@@ -178,7 +178,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x109453110>"
+       "<IPython.lib.display.YouTubeVideo at 0x10653c190>"
       ]
      },
      "execution_count": 3,
@@ -212,9 +212,12 @@
     "> Now we'll generate a bunch of integers and set the bin boundaries manually. This time, let's grab data from a Poisson distribution. As it turns out \n",
     "> `numpy` also has some convenient random number generators. Use `numpy.random.poisson` to generate 5000 numbers drawn from a Poisson distribution \n",
     "> characterized by $\\lambda = 10$. Find the maximum and minimum value of your 5000 random numbers. \n",
-    ">   * Instead of simplify specifying the number of bins for `numpy.histogram`, let's specify the bins we want using a vector. Create a vector \n",
+    ">   * Instead of simplify specifying the number of bins for `numpy.histogram`, let's specify the bins we want using a vector. \n",
+    "> Create a vector $v$\n",
     "> that results in a binning that puts each integer value in its own bin and where the first bin contains the minimum number you found above, \n",
-    "> and the last bin contains the maximum number. What is the sum over bin counts? Explain how the binning-vectors first and last element \n",
+    "> and the last bin contains the maximum number. \n",
+    "> Use  `numpy.histogram`'s `bin`\n",
+    "> What is the sum over bin counts? Explain how the binning-vectors first and last element \n",
     "> relates to the min and max from the Poisson distribution.\n",
     ">   * Now, use a bar chart (`matplotlib.pyplot.bar`) to plot the distribution \n",
     "> * Binning and plotting degree distributions. \n",
@@ -305,7 +308,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python2"
   },
