fixed some links

--- a/lectures/Week2.ipynb
+++ b/lectures/Week2.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -45,10 +45,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10646bc90>"
+       "<IPython.lib.display.YouTubeVideo at 0x10653c350>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -85,10 +85,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10653c050>"
+       "<IPython.lib.display.YouTubeVideo at 0x10653c2d0>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -178,10 +178,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10653c190>"
+       "<IPython.lib.display.YouTubeVideo at 0x10653c090>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
     "> Create a vector $v$\n",
     "> that results in a binning that puts each integer value in its own bin and where the first bin contains the minimum number you found above, \n",
     "> and the last bin contains the maximum number. \n",
-    "> Use  `numpy.histogram`'s `bin`\n",
+    "> Use the vector by setting `numpy.histogram`'s `bin` parameter as `bin = ` $v$. \n",
     "> What is the sum over bin counts? Explain how the binning-vectors first and last element \n",
     "> relates to the min and max from the Poisson distribution.\n",
     ">   * Now, use a bar chart (`matplotlib.pyplot.bar`) to plot the distribution \n",
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -259,10 +259,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x109453090>"
+       "<IPython.lib.display.YouTubeVideo at 0x10653c3d0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,14 +285,14 @@
     "> _Exercises_ (should be completed in a `notebook`):\n",
     "> \n",
     "> * Work through NS exercise 3.1 ('Erdős-Rényi Networks'). The exercise can be found in Section 3.11: Homework.\n",
-    "> * Paths. Plot a random network with 200 nodes and an average degree of 1.5\\. (I suggest using `networkx.draw` and reading [the documentation](https://networkx.readthedocs.io/en/stable/reference/drawing.html) carefully to get an overview of all the options and what they look like. For example, you may want to shrink the node size).\n",
+    "> * Paths. Plot a random network with 200 nodes and an average degree of 1.5\\. (I suggest using `networkx.draw` and reading [the documentation](https://networkx.github.io/documentation/networkx-1.10/reference/drawing.html) carefully to get an overview of all the options and what they look like. For example, you may want to shrink the node size).\n",
     ">   * Extract the Giant Connected Component, GCC. (Hint. You can use `networkx.connected_component_subgraphs`)\n",
     ">   * Choose a node at random from the GCC. (Hint: You may want to try `random.choice`.)\n",
     ">   * Find all nodes that are precisely 2 steps away from that node. (Hint. I suggest `networkx.single_source_shortest_path_length`)\n",
-    ">   * Plot the GCC with the following choice of colors. Starting node _black_ (`\"#000000\"`). The nodes 2 steps away _red_ (`\"#ff0000\"`). All other nodes _blue_ (`\"#A0CBE2\"`). Again, I suggest using `networkx.draw_networkx()` and reading [the documentation](https://networkx.readthedocs.io/en/stable/reference/generated/networkx.drawing.nx_pylab.draw_networkx.html#networkx.drawing.nx_pylab.draw_networkx) carefully find out how to color individual nodes.\n",
+    ">   * Plot the GCC with the following choice of colors. Starting node _black_ (`\"#000000\"`). The nodes 2 steps away _red_ (`\"#ff0000\"`). All other nodes _blue_ (`\"#A0CBE2\"`). Again, I suggest using `networkx.draw()` and reading [the documentation](https://networkx.github.io/documentation/networkx-1.10/reference/drawing.html) carefully find out how to color individual nodes.\n",
     "> \n",
     "\n",
-    "![Sune's Network](https://raw.githubusercontent.com/suneman/socialgraphs2016/master/files/edge_colormap.png)"
+    "![Sune's Network](https://raw.githubusercontent.com/suneman/socialgraphs2017/master/files/edge_colormap.png)"
    ]
   },
   {
