--- a/lectures/Week4.ipynb
+++ b/lectures/Week4.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 0: Regular expressions\n",
+    "# Prelude: Regular expressions\n",
     "\n",
     "Before we get started, we have to get a little head start on the _Natural Language Processing_ part of the class. This is a new direction for us, up to now, we've mostly been doing math-y stuff with Python, but today, we're going to be using Python to work through a text. The central thing we need to be able to do today, is to extract internal wikipedia links. And for that we need regular expressions.\n",
     "\n",
@@ -240,32 +240,10 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Part C: Analyzing the networks\n",
-    "\n",
-    "Now that we have the network, it's time to do a preliminary analysis of it (we'll go more in depth next time).\n",
-    "\n",
-    "> _Exercise_: Begin to analyze the philosopher network.\n",
-    "> \n",
-    "> * Why do you think we want to use a directed graph? Could have we used an undirected graph instead?\n",
-    "> * What is the total number of nodes in the network? What is the total number of links? What's the average degree? What's the median degree?\n",
-    "> * List the top 10 philosophers by in-degree and out-degree. What is the interpretation of in-degree and out-degree in this case? Have you heard about these philosophers before?\n",
-    "> * Plot the distribution of in-degrees and out-degrees, binned using `numpy.histogram`. What is the most common degree?\n",
-    "> * Plot the distribution of in-degrees and out-degrees one more time, this time plotted loglog scale.\n",
-    "> * Describe the distributions (as you would in a well written figure caption). Do they look Poissonian? Power-law? Something in between?\n",
-    "> * Plot a scatter plot of the the in- versus out- degree for all philosophers using a loglog scale. Comment on the relation between the two.\n",
-    ">"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
    "source": []
   }
  ],
