--- a/lectures/Week5.ipynb
+++ b/lectures/Week5.ipynb
@@ -65,9 +65,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> _Exercises_: Structure of the the philosopher network \n",
+    "\n",
+    "\n",
+    "We begin with a preliminary analysis of the network \n",
+    "\n",
+    "> _Exercise_: Begin to analyze the philosopher network.\n",
     "> \n",
-    "> Last time, we found the most connected philosophers (using degree centrality). Now let's dig in and try to understand more about the philosopher network using more advanced network features. If your network has more than one component, just work on the _giant connected component_ (GCC) in the exercises below (in a directed graph use the [_weakly_ connected component](https://networkx.github.io/documentation/networkx-1.9.1/reference/algorithms.component.html)).\n",
+    "> * Why do you think I want you guys to use a directed graph? Could have we used an undirected graph instead?\n",
+    "> * What is the total number of nodes in the network? What is the total number of links? What's the average degree? What's the median degree?\n",
+    "> * List the top 10 philosophers by in-degree and out-degree. What is the interpretation of in-degree and out-degree in this case? Have you heard about these philosophers before?\n",
+    "> * Plot the distribution of in-degrees and out-degrees, binned using `numpy.histogram`. What is the most common degree?\n",
+    "> * Plot the distribution of in-degrees and out-degrees one more time, this time plotted loglog scale.\n",
+    "> * Describe the distributions (as you would in a well written figure caption). Do they look Poissonian? Power-law? Something in between?\n",
+    "> * Plot a scatter plot of the the in- versus out- degree for all philosophers using a loglog scale. Comment on the relation between the two.\n",
+    ">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> _Exercise_: Going in depth with the structure of the the philosopher network \n",
+    "> \n",
+    "> Above, we found the most connected philosophers (using degree centrality). Now let's dig in and try to understand more about the philosopher network using more advanced network features. If your network has more than one component, just work on the _giant connected component_ (GCC) in the exercises below (in a directed graph use the [_weakly_ connected component](https://networkx.github.io/documentation/networkx-1.9.1/reference/algorithms.component.html)).\n",
     "> \n",
     "> * Not all of the measures we'll be considering below are defined for directed graphs, thus begin by creating an [undirected version](https://networkx.github.io/documentation/networkx-1.9.1/reference/generated/networkx.DiGraph.to_undirected.html) of the philosopher graph, that we can use whenever needed. Only use the undirected graph when explicitly stated in the exercise.\n",
     "> * Find the 5 most central philosophers according to [betweenness centrality](https://networkx.github.io/documentation/networkx-1.9.1/reference/generated/networkx.algorithms.centrality.betweenness_centrality.html). What role do you imagine philosophers with high wikipedia graph betweenness centrality play in the history of philosophy?\n",
@@ -96,7 +116,7 @@
    "source": [
     "## Part B: The branches of philosophy. Are they communities?\n",
     "\n",
-    "Before we begin, let's learn about communities. If you want to learn more details, I recommend you take a look at _Chapter 9_ in the _Network Science_ book ... but the lecture should be enough to get you started. For this and the next exercise, work on the _undirected_ version of the network.\n",
+    "Before we begin coding, let's learn about communities. If you want to learn more details, I recommend you take a look at _Chapter 9_ in the _Network Science_ book ... but the lecture should be enough to get you started. For this and the next exercise, work on the _undirected_ version of the network.\n",
     "\n",
     "> **_Video Lecture_**: Communities in networks. \n",
     "> "
