Assignment 1 is live

--- a/lectures/Week4.ipynb
+++ b/lectures/Week4.ipynb
@@ -31,7 +31,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10940bb90>"
+       "<IPython.lib.display.YouTubeVideo at 0x10e90bcd0>"
       ]
      },
      "execution_count": 1,
@@ -128,7 +128,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x10944cf90>"
+       "<IPython.lib.display.YouTubeVideo at 0x10e9de050>"
       ]
      },
      "execution_count": 2,
@@ -192,7 +192,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x108db7250>"
+       "<IPython.lib.display.YouTubeVideo at 0x10e90b050>"
       ]
      },
      "execution_count": 3,
