minor error fixed

--- a/lectures/Week6.ipynb
+++ b/lectures/Week6.ipynb
@@ -101,7 +101,7 @@
    "source": [
     "> _Exercises_: NLPP1e Chapter 1 (the stuff that might be due in an upcoming assignment).\n",
     "> \n",
-    "> The following exercises from Chapter 1 are what might be due for an assignment later one.\n",
+    "> The following exercises from Chapter 1 are what might be due in an assignment later on.\n",
     ">\n",
     "> * Try out the `concordance` method, using another text and a word of your own choosing.\n",
     "> * Also try out the `similar` and `common_context` methods for a few of your own examples.\n",
