--- a/assignments/Assignment2.ipynb
+++ b/assignments/Assignment2.ipynb
@@ -130,10 +130,10 @@
     "\n",
     "Now you're ready to get started\n",
     "\n",
-    "* Calculate the average similarity for all human navigation paths (the _source_/_target_ pairs from above). Calculate mean/variance of these average similarities.\n",
-    "* Calculate the average similarity for all shortest paths between the _source_/_target_ pairs. Calculate mean/variance of these average similarities.\n",
-    "* Plot the distributions of average similarities for both human- and shortest paths in a single plot. If everything works well, you should see something similar to the following:\n",
-    "![alt text](https://raw.githubusercontent.com/suneman/socialgraphs2016/master/files/path-similarity.png)\n",
+    "* Calculate the average pairwise similarity for all human navigation paths (the _source_/_target_ pairs from above). With start and end at node $i,j$ we can call this similarity $s_{i,j}$. Calculate mean/variance of the $s_{ij}$'s.\n",
+    "* Calculate the average pairwise similarity for all shortest paths between the _source_/_target_ pairs ($S_{i,j}$). Calculate mean/variance of the $S_{i,j}$.\n",
+    "* Plot the distributions of average pairwise similarities for both human- and shortest paths in a single plot. If everything works well, you should see something similar to the following:\n",
+    "![alt text](https://raw.githubusercontent.com/suneman/socialgraphs2017/master/files/path-similarity.png)\n",
     "* Finally, for each source/target pair, compare the human-navigation average similarity with the betweenness based average similarity, testing what fraction of the time, the average similarity is lower in the case of human navigation.\n",
     "* Comment on your findings. Is **H1** true?"
    ]
